--- a/HTML + CSS/summary.html
+++ b/HTML + CSS/summary.html
@@ -21,7 +21,7 @@
 					<h3>Технологии и навыки:</h3>
 					<ul>
 						<li>Java - на базовом уровне</li>
-						<li>C - на на базовом уровне</li>
+						<li>C - на базовом уровне</li>
 						<li>Sql - на уровне лабараторных работ</li>
 						<li>HTML - базовый уровень</li>
 						<li>CSS - базовый уровень</li>
